# kongsberg_em_driver

./: .travis.rosinstall  .travis.yml  CMakeLists.txt  LICENSE  README.md  codcov.yml  package.xml
include/lib_kongsberg_em/: kongsberg_em2040.h
launch/: em2040_parse_test.test  kongsberg_2040.launch  kongsberg_2040.yaml
src/em_driver_library/EM_datagrams/: EMdgmFormat.h  EMdgmFormat_h.h  EMdgmFormat_i.h  KMALL_mrz_decoder.h  KMALL_reader.cpp  license.txt
src/em_driver_library/EM_driver/: kongsberg_em2040.cpp  kongsberg_em2040_private.h  kongsberg_em2040_strings.h  kongsberg_em2040_util.h
src/em_driver_node/: main.cpp  nodeudpsocket.cpp  nodeudpsocket.h
src/test/: test_kongsberg_em2040_parsing.cpp  test_kongsberg_em2040_util.cpp  test_xml_load.xml
test/: EM2040_40_cfg.xml  MRZ_versionF.kmall  MRZ_versionH.kmall  test_kongsberg_em2040_parsing.cpp  test_kongsberg_kctrl_parsing.cpp
