<?xml version="1.0"?>
<package format="2">
  <name>kongsberg_em_driver</name>
  <version>0.1.0</version>
  <description>The kongsberg_em_driver package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="nobody@nowhere.com">NONE</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://www.whoi.edu</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="axd@robopec.com">A. Durbec</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>ds_core_msgs</depend>
  <depend>ds_multibeam_msgs</depend>
  <depend>ds_kongsberg_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
